--- a/assistants.html
+++ b/assistants.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Assistant Team</title>
+  <title>Meet Your AI Assistant Team</title>
   <style>
     body {
       font-family: sans-serif;
@@ -57,20 +57,20 @@
 <body>
   <h1>Meet Your AI Assistant Team</h1>
   <div class="grid">
-    <!-- Card Template -->
+    <!-- Example for 1 assistant card (repeated for each assistant) -->
     <div class="card">
-      <img src="https://your-hosted-image.com/arlo.jpg" alt="Arlo" />
+      <img src="https://your-hosted-link.com/arlo.jpg" alt="Arlo" />
       <h3>Arlo</h3>
-      <p>Finance Assistant</p>
+      <p>Finance AI Assistant</p>
       <button>Ask Arlo</button>
     </div>
-    <!-- Repeat similar cards for the other 13 assistants -->
+    <!-- Add 13 more real assistant cards here following the same pattern -->
 
     <!-- Kaya Placeholder -->
     <div class="card blank">
       <img src="" alt="" />
       <h3>Coming Soon</h3>
-      <p>eCommerce Assistant</p>
+      <p>eCommerce AI Assistant</p>
       <button disabled>Pending</button>
     </div>
   </div>
