--- a/assistants.html
+++ b/assistants.html
@@ -57,21 +57,95 @@
 <body>
   <h1>Meet Your AI Assistant Team</h1>
   <div class="grid">
-    <!-- Example for 1 assistant card (repeated for each assistant) -->
     <div class="card">
-      <img src="https://your-hosted-link.com/arlo.jpg" alt="Arlo" />
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/arlo.jpg" alt="Arlo" />
       <h3>Arlo</h3>
       <p>Finance AI Assistant</p>
       <button>Ask Arlo</button>
     </div>
-    <!-- Add 13 more real assistant cards here following the same pattern -->
-
-    <!-- Kaya Placeholder -->
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/lena.jpg" alt="Lena" />
+      <h3>Lena</h3>
+      <p>HR AI Assistant</p>
+      <button>Ask Lena</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/zoe.jpg" alt="Zoe" />
+      <h3>Zoe</h3>
+      <p>Social Media AI Assistant</p>
+      <button>Ask Zoe</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/james.jpg" alt="James" />
+      <h3>James</h3>
+      <p>Project Management AI Assistant</p>
+      <button>Ask James</button>
+    </div>
     <div class="card blank">
       <img src="" alt="" />
       <h3>Coming Soon</h3>
       <p>eCommerce AI Assistant</p>
       <button disabled>Pending</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/isaac.jpg" alt="Isaac" />
+      <h3>Isaac</h3>
+      <p>Sales AI Assistant</p>
+      <button>Ask Isaac</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/tyler.jpg" alt="Tyler" />
+      <h3>Tyler</h3>
+      <p>Data Science AI Assistant</p>
+      <button>Ask Tyler</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/aisha.jpg" alt="Aisha" />
+      <h3>Aisha</h3>
+      <p>Customer Service AI Assistant</p>
+      <button>Ask Aisha</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/customer.jpg" alt="Customer" />
+      <h3>Customer</h3>
+      <p>Service AI Assistant</p>
+      <button>Ask Customer</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/leo.jpg" alt="Leo" />
+      <h3>Leo</h3>
+      <p>Startup AI Assistant</p>
+      <button>Ask Leo</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/mia.jpg" alt="Mia" />
+      <h3>Mia</h3>
+      <p>Cybersecurity AI Assistant</p>
+      <button>Ask Mia</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/sarah.jpg" alt="Sarah" />
+      <h3>Sarah</h3>
+      <p>Staff AI Assistant</p>
+      <button>Ask Sarah</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/josiah.jpg" alt="Josiah" />
+      <h3>Josiah</h3>
+      <p>Content AI Assistant</p>
+      <button>Ask Josiah</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/autumn.jpg" alt="Autumn" />
+      <h3>Autumn</h3>
+      <p>Business AI Assistant</p>
+      <button>Ask Autumn</button>
+    </div>
+    <div class="card">
+      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/business.jpg" alt="Business" />
+      <h3>Business</h3>
+      <p>AI Assistant</p>
+      <button>Ask Business</button>
     </div>
   </div>
 </body>
