--- a/assistants.html
+++ b/assistants.html
@@ -13,7 +13,7 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(5, 1fr);
       gap: 1.5rem;
     }
     .card {
@@ -22,6 +22,10 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       padding: 1rem;
       text-align: center;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     .card img {
       width: 100%;
@@ -51,6 +55,21 @@
     .card.blank img {
       background: #d1d5db;
       display: block;
+    }
+    @media (max-width: 1200px) {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+    @media (max-width: 480px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
