--- a/assistants.html
+++ b/assistants.html
@@ -14,22 +14,22 @@
     .grid {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 1.5rem;
+      gap: 1.2rem;
     }
     .card {
       background: white;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      padding: 1rem;
+      padding: 0.8rem;
       text-align: center;
-      height: 400px;
+      height: 370px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
     }
     .card img {
       width: 100%;
-      height: 220px;
+      height: 200px;
       object-fit: cover;
       border-radius: 8px;
     }
@@ -47,14 +47,6 @@
       padding: 0.5rem 1rem;
       border-radius: 6px;
       cursor: pointer;
-    }
-    .card.blank {
-      background: #e5e7eb;
-      color: #999;
-    }
-    .card.blank img {
-      background: #d1d5db;
-      display: block;
     }
     @media (max-width: 1200px) {
       .grid {
@@ -77,94 +69,94 @@
   <h1>Meet Your AI Assistant Team</h1>
   <div class="grid">
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/arlo.jpg" alt="Arlo" />
+      <img src="images/arlo.jpg" alt="Arlo" />
       <h3>Arlo</h3>
       <p>Finance AI Assistant</p>
       <button>Ask Arlo</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/lena.jpg" alt="Lena" />
+      <img src="images/lena.jpg" alt="Lena" />
       <h3>Lena</h3>
       <p>HR AI Assistant</p>
       <button>Ask Lena</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/zoe.jpg" alt="Zoe" />
+      <img src="images/zoe.jpg" alt="Zoe" />
       <h3>Zoe</h3>
       <p>Social Media AI Assistant</p>
       <button>Ask Zoe</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/james.jpg" alt="James" />
+      <img src="images/james.jpg" alt="James" />
       <h3>James</h3>
-      <p>Project Management AI Assistant</p>
+      <p>Project Management AI</p>
       <button>Ask James</button>
     </div>
-    <div class="card blank">
-      <img src="" alt="" />
-      <h3>Coming Soon</h3>
+    <div class="card">
+      <img src="images/ethan.jpg" alt="Ethan" />
+      <h3>Ethan</h3>
       <p>eCommerce AI Assistant</p>
-      <button disabled>Pending</button>
+      <button>Ask Ethan</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/isaac.jpg" alt="Isaac" />
+      <img src="images/isaac.jpg" alt="Isaac" />
       <h3>Isaac</h3>
       <p>Sales AI Assistant</p>
       <button>Ask Isaac</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/tyler.jpg" alt="Tyler" />
+      <img src="images/tyler.jpg" alt="Tyler" />
       <h3>Tyler</h3>
       <p>Data Science AI Assistant</p>
       <button>Ask Tyler</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/aisha.jpg" alt="Aisha" />
+      <img src="images/aisha.jpg" alt="Aisha" />
       <h3>Aisha</h3>
-      <p>Customer Service AI Assistant</p>
+      <p>Customer Service AI</p>
       <button>Ask Aisha</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/customer.jpg" alt="Customer" />
-      <h3>Customer</h3>
+      <img src="images/ava.jpg" alt="Ava" />
+      <h3>Ava</h3>
       <p>Service AI Assistant</p>
-      <button>Ask Customer</button>
+      <button>Ask Ava</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/leo.jpg" alt="Leo" />
+      <img src="images/leo.jpg" alt="Leo" />
       <h3>Leo</h3>
       <p>Startup AI Assistant</p>
       <button>Ask Leo</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/mia.jpg" alt="Mia" />
+      <img src="images/mia.jpg" alt="Mia" />
       <h3>Mia</h3>
       <p>Cybersecurity AI Assistant</p>
       <button>Ask Mia</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/sarah.jpg" alt="Sarah" />
+      <img src="images/sarah.jpg" alt="Sarah" />
       <h3>Sarah</h3>
       <p>Staff AI Assistant</p>
       <button>Ask Sarah</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/josiah.jpg" alt="Josiah" />
+      <img src="images/josiah.jpg" alt="Josiah" />
       <h3>Josiah</h3>
       <p>Content AI Assistant</p>
       <button>Ask Josiah</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/autumn.jpg" alt="Autumn" />
-      <h3>Autumn</h3>
+      <img src="images/lucas.jpg" alt="Lucas" />
+      <h3>Lucas</h3>
       <p>Business AI Assistant</p>
-      <button>Ask Autumn</button>
+      <button>Ask Lucas</button>
     </div>
     <div class="card">
-      <img src="https://eastwest-packages.s3.eu-west-2.amazonaws.com/business.jpg" alt="Business" />
-      <h3>Business</h3>
+      <img src="images/sophie.jpg" alt="Sophie" />
+      <h3>Sophie</h3>
       <p>AI Assistant</p>
-      <button>Ask Business</button>
+      <button>Ask Sophie</button>
     </div>
   </div>
 </body>
