--- a/assistants.html
+++ b/assistants.html
@@ -93,7 +93,7 @@
       <button>Ask James</button>
     </div>
     <div class="card">
-      <img src="images/ethan.jpg" alt="Ethan" />
+      <img src="images/Ethan.jpg" alt="Ethan" />
       <h3>Ethan</h3>
       <p>eCommerce AI Assistant</p>
       <button>Ask Ethan</button>
@@ -117,7 +117,7 @@
       <button>Ask Aisha</button>
     </div>
     <div class="card">
-      <img src="images/ava.jpg" alt="Ava" />
+      <img src="images/Ava.jpg" alt="Ava" />
       <h3>Ava</h3>
       <p>Service AI Assistant</p>
       <button>Ask Ava</button>
@@ -147,13 +147,13 @@
       <button>Ask Josiah</button>
     </div>
     <div class="card">
-      <img src="images/lucas.jpg" alt="Lucas" />
+      <img src="images/Lucas.jpg" alt="Lucas" />
       <h3>Lucas</h3>
       <p>Business AI Assistant</p>
       <button>Ask Lucas</button>
     </div>
     <div class="card">
-      <img src="images/sophie.jpg" alt="Sophie" />
+      <img src="images/Sophie.jpg" alt="Sophie" />
       <h3>Sophie</h3>
       <p>AI Assistant</p>
       <button>Ask Sophie</button>
