--- a/assistants.html
+++ b/assistants.html
@@ -7,157 +7,156 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f9f9f9;
+      background: #f5f5f5;
       margin: 0;
       padding: 2rem;
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 1.2rem;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
     }
     .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      padding: 0.8rem;
-      text-align: center;
-      height: 370px;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 2rem 1rem;
+      border-radius: 16px;
+      color: white;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      transition: transform 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
     }
     .card img {
-      width: 100%;
-      height: 200px;
+      width: 160px;
+      height: 160px;
+      border-radius: 12px;
       object-fit: cover;
-      border-radius: 8px;
+      margin-bottom: 1rem;
     }
     .card h3 {
-      margin: 0.8rem 0 0.3rem;
+      margin: 0.5rem 0 0.2rem;
+      font-size: 1.4rem;
     }
     .card p {
-      margin: 0 0 0.8rem;
-      color: #666;
+      margin: 0;
+      font-size: 0.95rem;
     }
-    .card button {
-      background: #10b981;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    @media (max-width: 1200px) {
-      .grid {
-        grid-template-columns: repeat(3, 1fr);
-      }
-    }
-    @media (max-width: 768px) {
-      .grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-    @media (max-width: 480px) {
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
+    .bg1 { background: linear-gradient(145deg, #4e54c8, #8f94fb); }
+    .bg2 { background: linear-gradient(145deg, #ff9966, #ff5e62); }
+    .bg3 { background: linear-gradient(145deg, #56ab2f, #a8e063); }
+    .bg4 { background: linear-gradient(145deg, #614385, #516395); }
+    .bg5 { background: linear-gradient(145deg, #00c6ff, #0072ff); }
+    .bg6 { background: linear-gradient(145deg, #f7971e, #ffd200); }
+    .bg7 { background: linear-gradient(145deg, #fc5c7d, #6a82fb); }
+    .bg8 { background: linear-gradient(145deg, #bdc3c7, #2c3e50); }
+    .bg9 { background: linear-gradient(145deg, #f2709c, #ff9472); }
+    .bg10 { background: linear-gradient(145deg, #00b09b, #96c93d); }
+    .bg11 { background: linear-gradient(145deg, #d38312, #a83279); }
+    .bg12 { background: linear-gradient(145deg, #cc2b5e, #753a88); }
+    .bg13 { background: linear-gradient(145deg, #43cea2, #185a9d); }
+    .bg14 { background: linear-gradient(145deg, #c33764, #1d2671); }
+    .bg15 { background: linear-gradient(145deg, #de6161, #2657eb); }
   </style>
 </head>
 <body>
   <h1>Meet Your AI Assistant Team</h1>
   <div class="grid">
-    <div class="card">
+    <a href="#" class="card bg1">
       <img src="images/arlo.jpg" alt="Arlo" />
       <h3>Arlo</h3>
       <p>Finance AI Assistant</p>
-      <button>Ask Arlo</button>
-    </div>
-    <div class="card">
+      <p>Helps manage bookkeeping, VAT, and cash flow insights.</p>
+    </a>
+    <a href="#" class="card bg2">
       <img src="images/lena.jpg" alt="Lena" />
       <h3>Lena</h3>
       <p>HR AI Assistant</p>
-      <button>Ask Lena</button>
-    </div>
-    <div class="card">
+      <p>Tracks staff changes, onboarding, and HR docs.</p>
+    </a>
+    <a href="#" class="card bg3">
       <img src="images/zoe.jpg" alt="Zoe" />
       <h3>Zoe</h3>
       <p>Social Media AI Assistant</p>
-      <button>Ask Zoe</button>
-    </div>
-    <div class="card">
+      <p>Plans posts, analyses engagement, and writes captions.</p>
+    </a>
+    <a href="#" class="card bg4">
       <img src="images/james.jpg" alt="James" />
       <h3>James</h3>
       <p>Project Management AI</p>
-      <button>Ask James</button>
-    </div>
-    <div class="card">
-      <img src="images/Ethan.jpg" alt="Ethan" />
+      <p>Helps organize client workflows, timelines and deliverables.</p>
+    </a>
+    <a href="#" class="card bg5">
+      <img src="images/ethan.jpg" alt="Ethan" />
       <h3>Ethan</h3>
       <p>eCommerce AI Assistant</p>
-      <button>Ask Ethan</button>
-    </div>
-    <div class="card">
+      <p>Coming soon</p>
+    </a>
+    <a href="#" class="card bg6">
       <img src="images/isaac.jpg" alt="Isaac" />
       <h3>Isaac</h3>
       <p>Sales AI Assistant</p>
-      <button>Ask Isaac</button>
-    </div>
-    <div class="card">
+      <p>Tracks pipelines, follows leads, and logs calls.</p>
+    </a>
+    <a href="#" class="card bg7">
       <img src="images/tyler.jpg" alt="Tyler" />
       <h3>Tyler</h3>
       <p>Data Science AI Assistant</p>
-      <button>Ask Tyler</button>
-    </div>
-    <div class="card">
+      <p>Creates dashboards and runs performance analysis.</p>
+    </a>
+    <a href="#" class="card bg8">
       <img src="images/aisha.jpg" alt="Aisha" />
       <h3>Aisha</h3>
       <p>Customer Service AI</p>
-      <button>Ask Aisha</button>
-    </div>
-    <div class="card">
-      <img src="images/Ava.jpg" alt="Ava" />
+      <p>Handles queries, builds FAQ, and reminders.</p>
+    </a>
+    <a href="#" class="card bg9">
+      <img src="images/ava.jpg" alt="Ava" />
       <h3>Ava</h3>
       <p>Service AI Assistant</p>
-      <button>Ask Ava</button>
-    </div>
-    <div class="card">
+      <p>Chases missing paperwork and reminds clients.</p>
+    </a>
+    <a href="#" class="card bg10">
       <img src="images/leo.jpg" alt="Leo" />
       <h3>Leo</h3>
       <p>Startup AI Assistant</p>
-      <button>Ask Leo</button>
-    </div>
-    <div class="card">
+      <p>Helps new businesses track key steps.</p>
+    </a>
+    <a href="#" class="card bg11">
       <img src="images/mia.jpg" alt="Mia" />
       <h3>Mia</h3>
       <p>Cybersecurity AI Assistant</p>
-      <button>Ask Mia</button>
-    </div>
-    <div class="card">
+      <p>Flags risks, reminds of GDPR tasks, and password safety.</p>
+    </a>
+    <a href="#" class="card bg12">
       <img src="images/sarah.jpg" alt="Sarah" />
       <h3>Sarah</h3>
       <p>Staff AI Assistant</p>
-      <button>Ask Sarah</button>
-    </div>
-    <div class="card">
+      <p>Reminds staff of missing items and policies.</p>
+    </a>
+    <a href="#" class="card bg13">
       <img src="images/josiah.jpg" alt="Josiah" />
       <h3>Josiah</h3>
       <p>Content AI Assistant</p>
-      <button>Ask Josiah</button>
-    </div>
-    <div class="card">
-      <img src="images/Lucas.jpg" alt="Lucas" />
+      <p>Writes newsletter and campaign material.</p>
+    </a>
+    <a href="#" class="card bg14">
+      <img src="images/lucas.jpg" alt="Lucas" />
       <h3>Lucas</h3>
       <p>Business AI Assistant</p>
-      <button>Ask Lucas</button>
-    </div>
-    <div class="card">
-      <img src="images/Sophie.jpg" alt="Sophie" />
+      <p>Helps with reporting, decision support and strategy.</p>
+    </a>
+    <a href="#" class="card bg15">
+      <img src="images/sophie.jpg" alt="Sophie" />
       <h3>Sophie</h3>
       <p>AI Assistant</p>
-      <button>Ask Sophie</button>
-    </div>
+      <p>General support for tasks and overflow requests.</p>
+    </a>
   </div>
 </body>
 </html>
