--- a/assistants.html
+++ b/assistants.html
@@ -92,7 +92,7 @@
       <p>Helps organize client workflows, timelines and deliverables.</p>
     </a>
     <a href="#" class="card bg5">
-      <img src="images/ethan.jpg" alt="Ethan" />
+      <img src="images/Ethan.jpg" alt="Ethan" />
       <h3>Ethan</h3>
       <p>eCommerce AI Assistant</p>
       <p>Coming soon</p>
@@ -116,7 +116,7 @@
       <p>Handles queries, builds FAQ, and reminders.</p>
     </a>
     <a href="#" class="card bg9">
-      <img src="images/ava.jpg" alt="Ava" />
+      <img src="images/Ava.jpg" alt="Ava" />
       <h3>Ava</h3>
       <p>Service AI Assistant</p>
       <p>Chases missing paperwork and reminds clients.</p>
@@ -146,13 +146,13 @@
       <p>Writes newsletter and campaign material.</p>
     </a>
     <a href="#" class="card bg14">
-      <img src="images/lucas.jpg" alt="Lucas" />
+      <img src="images/Lucas.jpg" alt="Lucas" />
       <h3>Lucas</h3>
       <p>Business AI Assistant</p>
       <p>Helps with reporting, decision support and strategy.</p>
     </a>
     <a href="#" class="card bg15">
-      <img src="images/sophie.jpg" alt="Sophie" />
+      <img src="images/Sophie.jpg" alt="Sophie" />
       <h3>Sophie</h3>
       <p>AI Assistant</p>
       <p>General support for tasks and overflow requests.</p>
