--- a/assistants.html
+++ b/assistants.html
@@ -52,7 +52,7 @@
     <a href="#" class="card"><img src="images/leo.jpg" alt="Leo" /></a>
     <a href="#" class="card"><img src="images/mia.jpg" alt="Mia" /></a>
     <a href="#" class="card"><img src="images/sarah.jpg" alt="Sarah" /></a>
-    <a href="#" class="card"><img src="images/josiah.jpg" alt="Josiah" /></a>
+    <a href="#" class="card"><img src="images/elsa.jpg" alt="elsa" /></a>
     <a href="#" class="card"><img src="images/lucas.jpg" alt="Lucas" /></a>
     <a href="#" class="card"><img src="images/sophie.jpg" alt="Sophie" /></a>
   </div>
