--- a/index.html
+++ b/index.html
@@ -116,7 +116,17 @@
 </head>
 <body>
   <h1>🎯 Replacement AI Task Board</h1>
-
+<div class="sidebar">
+  <h2>📊 Dashboard</h2>
+  <ul>
+    <li><a href="index.html">🏠 Home</a></li>
+    <li><a href="assistants.html">🤖 My AI Team</a></li>
+    <li><a href="#">📅 Task Board</a></li>
+    <li><a href="#">⚡ Power-Ups</a></li>
+    <li><a href="#">📈 Reports</a></li>
+    <li><a href="#">🧾 Bookkeeping Center</a></li>
+  </ul>
+</div>
   <div class="board">
     <div class="column" id="todo">
       <h2>To Do</h2>
