--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
       border-radius: 0 4px 4px 0;
       cursor: pointer;
     }
+    .sidebar {
+  width: 250px;
+  height: 100vh;
+  background: #1e293b;
+  color: white;
+  padding: 20px;
+  position: fixed;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar li {
+  margin: 10px 0;
+}
+
+.sidebar a {
+  color: white;
+  text-decoration: none;
+}
     #feedback {
       position: fixed;
       bottom: 20px;
