--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
     <li><a href="#">🧾 Bookkeeping Center</a></li>
   </ul>
 </div>
+  <div class="main-content" style="margin-left: 270px; padding: 20px;">
+  <!-- Your content here -->
+</div>
+
   <div class="board">
     <div class="column" id="todo">
       <h2>To Do</h2>
